# Learnings

./: .gitignore  .gitmodules
DynamicsAndControl/: CMakeLists.txt
DynamicsAndControl/GoodVibrationsWithFreeball/: CMakeLists.txt
DynamicsAndControl/GoodVibrationsWithFreeball/TheFiniteElementMethod/: CMakeLists.txt
DynamicsAndControl/GoodVibrationsWithFreeball/TheFiniteElementMethod/CPP/: CMakeLists.txt
DynamicsAndControl/GoodVibrationsWithFreeball/TheFiniteElementMethod/CPP/include/TheFiniteElementMethod/: 03_bar_element.h  05_improved_bar_element.h
DynamicsAndControl/GoodVibrationsWithFreeball/TheFiniteElementMethod/CPP/src/: 03_bar_element.cpp  05_improved_bar_element.cpp  matplotlibtest.cpp
DynamicsAndControl/GoodVibrationsWithFreeball/TheFiniteElementMethod/Python/: 03_bar_element.py  05_improved_bar_element.py  07_truss.py
DynamicsAndControl/cmake/modules/: FindEigen3.cmake  FindPython38.cmake  Findmatplotlibcpp.cmake  Findpch.cmake
DynamicsAndControl/pchpkg/: CMakeLists.txt
DynamicsAndControl/pchpkg/include/pch/: pch.h
DynamicsAndControl/utils_pkg/: CMakeLists.txt
DynamicsAndControl/utils_pkg/eigen_utils_lib/: CMakeLists.txt
DynamicsAndControl/utils_pkg/eigen_utils_lib/include/eigen_utils_lib/: eigen_utils.h
DynamicsAndControl/utils_pkg/eigen_utils_lib/src/: eigen_utils.cpp
DynamicsAndControl/utils_pkg/utils_test/: CMakeLists.txt
DynamicsAndControl/utils_pkg/utils_test/src/: eigen_utils_test.cpp
ML/gl_eye_tracking5/: CMakeLists.txt  README.md  build.bat  build.sh  gl_eye_tracking5.mabu  gl_eye_tracking5.package  glm.comp  manifest.xml
ML/gl_eye_tracking5/data/res/cloud/: depth_data_tbd.txt
ML/gl_eye_tracking5/data/res/shaders/: basic.frag  texture.vert
ML/gl_eye_tracking5/include/core/: game_engine.h  glm.h  ml_graphics_context.h  ml_to_glm.h  ml_utilities.h  platform_includes.h
ML/gl_eye_tracking5/include/gl_eye_tracking/: ros_ml_client.h
ML/gl_eye_tracking5/include/render/: RBCube.h  RBCubeDynamic.h  RBCylinder.h  RBPoint.h  RBPointDynamic.h  RBShader.h  RBSquare.h
ML/gl_eye_tracking5/src/: RBPointDynamic.h  RBSquare.cpp
ML/gl_eye_tracking5/src/core/: game_engine.cpp  ml_graphics_context.cpp
ML/gl_eye_tracking5/src/gl_eye_tracking/: main.cpp  ros_ml_client.cpp
ML/gl_eye_tracking5/src/gl_eye_tracking5/: main.cpp
ML/gl_eye_tracking5/src/render/: RBCube.cpp  RBCubeDynamic.cpp  RBCylinder.cpp  RBPoint.cpp  RBPointDynamic.cpp  RBSquare.cpp
Networking/NativeC/gog/: 03-ucp_server.c  04-ucp_connect_client  04-ucp_connect_client.c  04-ucp_connect_server  04-ucp_connect_server.c  CMakeLists.txt  a.out  client  server  socket_client  tcp_client  udp_client  udpconnect_client  udpconnect_server
Networking/NativeC/gog/include/gog/: socket_client.hpp  socket_server.hpp  struct_declarations.hpp
Networking/NativeC/gog/src/: char_array_to_string.cpp  char_array_to_string2.cpp  serialize_deserialize.cpp  serialize_deserialize2.cpp  serialize_deserialize3.cpp  serialize_deserialize4.cpp  serialize_deserialize5.cpp  socket_client.cpp  socket_server.cpp  tcp_client_pass_structure.cpp  tcp_server_pass_structure.cpp
OpenGL/MinimalCode/: CMakeLists.txt
OpenGL/MinimalCode/res/shaders/: Basic.shader
OpenGL/MinimalCode/src/: 02-hello_triangle.cpp  02_1-hello_triangles.cpp  02_2-two_triangles_diff_objs.cpp  03_3-more_attributes.cpp  03_4-using_shader_class.cpp  04_1-texture.cpp  04_2-multiple_textures.cpp  04_3-dynamic_textures.cpp  04_4-only_texture.cpp  04_ex-2.cpp  04_ex-3.cpp  04_ex-4.cpp  Application.cpp
OpenGL/MinimalCode/src/01-GettingStarted/01-CreatingWindow/: 01-hello_window.cpp
OpenGL/MinimalCode/src/01-GettingStarted/02-CreatingTriange/: 02_1-hello_triangles.cpp  02_3-two_triangles_two_objs_two_shaders.cpp
OpenGL/MinimalCode/src/01-GettingStarted/03-Shaders/: 03_1-shaders.cpp  03_2-uniform.cpp  03_4-using_shader_class.cpp
OpenGL/MinimalCode/src/01-GettingStarted/04-Textures/: 04_1-texture.cpp  04_2-multiple_textures.cpp  04_3-dynamic_textures.cpp  04_4-only_texture.cpp  04_5-only_texture_dynamic.cpp  04_ex-2.cpp  04_ex-3.cpp  04_ex-4.cpp
OpenGL/MinimalCode/src/01-GettingStarted/05-Transformation/: 05_1-transformation.cpp  05_2-transformations.cpp  05_ex-2.cpp
OpenGL/MinimalCode/src/01-GettingStarted/06-CoordinateSystems/: 06_1-mvp1.cpp  06_2-3d.cpp  06_3-more_cubes.cpp  06_4-just_cubes.cpp  06_5-just_cube_ebo.cpp  06_5-just_cubes_ebo.cpp  06_6-just_cubes_ebo.cpp  06_ex-3.cpp
OpenGL/MinimalCode/src/01-GettingStarted/tbd/: 10_1-framebuffer_V2.cpp  shader_m.h
OpenGL/MinimalCode/src/core/: Shader.cpp  Shader.h
OpenGL/MinimalCode/src/res/shaders/: 4.2.shader.fs  4.3.shader.fs  4.ex4.shader.fs
OpenGL/MinimalCode/src/res/shaders/03-Shaders/: 3.ex2.shader.vs  3.ex3.shader.vs
OpenGL/MinimalCode/src/res/shaders/04-Textures/: 4.4.shader.fs  4.4.shader.vs  4.ex1.shader.fs
OpenGL/MinimalCode/src/res/shaders/tbd/: 5.1.framebuffers.vs  camera.h  mesh.h  shader.h
OpenGL/MinimalCode/src/tbd/: 10_1-framebuffer.cpp  10_1-framebuffer_V2.cpp  10_1-framebuffer_bp.cpp  model.h
OpenGL/MinimalCode/src/tbd/client_server/client/: frame_publisher.cpp  socket_client.cpp  socket_client.hpp
OpenGL/MinimalCode/src/tbd/client_server/server/: frame_receiver.cpp  (+3 more)
OpenGL/OpenGL_linux/: CMakeLists.txt
OpenGL/OpenGL_linux/res/shaders/: Basic.shader
OpenGL/OpenGL_linux/src/: Application  Application.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
ROSMLDesktop/decoco/: CMakeLists.txt
ROSMLDesktop/networking2/: CMakeLists.txt
ROSMLDesktop/networking2/client/include/client/: socket_client.hpp  zlib_compression.hpp
ROSMLDesktop/networking2/client/src/: point_cloud_client.cpp  zlib_compression.cpp
ROSMLDesktop/networking2/server/include/server/: socket_server.hpp
ROSMLDesktop/networking2/server/src/: point_cloud_server.cpp  socket_server.cpp  zlib_compression.cpp
pigz/: CMakeLists.txt  deserialize_p_vertices.c  pigz_array.c  unpigz_array.c
(+565 files in other folders)
